--- a/src/pages/SignUp/style.css
+++ b/src/pages/SignUp/style.css
@@ -1,6 +1,6 @@
 #register,
 #login {
-  width: 40%;
+  width: 485px;
   padding: 0px 15px 15px 15px;
   border-radius: 5px;
   font-family: arial;
@@ -25,7 +25,7 @@ form label,
 form input {
   display: block;
   margin-bottom: 10px;
-  width: 90%;
+  width: 465px;
 }
 
 form input {
@@ -34,8 +34,15 @@ form input {
   border-radius: 8px;
 }
 
+@media screen and (max-width: 768px) {
+  form input {
+    width: 485px;
+  }
+}
+
 .button {
   background-color: #3cb371;
+  width: 230px !important;
   border-radius: 99px;
   font-weight: bold;
   padding: 12px 15px;
@@ -82,5 +89,6 @@ input:focus {
 }
 
 input[type="submit"] {
-  width: 100%;
+  width: 230px !important;
+  margin-bottom: 0px;
 }
