--- a/src/components/DatePick/styles.css
+++ b/src/components/DatePick/styles.css
@@ -4,16 +4,26 @@
   color: #fff;
 }
 
+.react-datepicker__day--selected:hover {
+  border-radius: 1.3rem;
+  background-color: #3cb371;
+  color: #fff;
+}
+
+.react-datepicker__day:hover {
+  border-radius: 1.3rem;
+}
+
 .react-datepicker__day--keyboard-selected {
   background-color: transparent;
   color: black;
 }
 
-.date-input {
+.date-pick {
   width: 100%;
   height: 33px;
   text-align: center;
-  border-radius: 12px;
+  border-radius: 1.3rem;
   border: 1px solid #929292;
   cursor: pointer;
   font-size: 15px;
